--- a/Makefile.in
+++ b/Makefile.in
@@ -20,6 +20,7 @@ DISTFILES=\
 	README\
 	LICENSE
 PROG=jsonkv
+MAN=jsonkv.1
 
 OBJS=$(SRCS:.c=.o)
 
@@ -37,8 +38,13 @@ clean:
 install: $(PROG)
 	if [ ! -x $(DESTDIR)$(bindir) ] ; then \
 		mkdir -p $(DESTDIR)$(bindir) ; fi
+	if [ ! -x $(DESTDIR)$(mandir) ] ; then \
+		mkdir -p $(DESTDIR)$(mandir) ; fi
 	$(INSTALL) $(INSTALLFLAGS) $(PROG) $(DESTDIR)$(bindir)
+	$(INSTALL) $(INSTALLFLAGS) $(MAN) $(DESTDIR)$(mandir)/$(MAN)
 
 uninstall:
 	if [ -e $(DESTDIR)$(bindir)/$(PROG) ] ; then \
 		rm $(DESTDIR)$(bindir)/$(PROG) ; fi
+	rm -f $(DESTDIR)$(mandir)/$(MAN)
+
