--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ datarootdir = $(prefix)/share
 mandir = $(datarootdir)/man
 
 INSTALL ?= install
-INSTALLFLAGS ?=
+INSTALLFLAGS ?= -D
 
 SRCS=jsonv.c jsonkv.c \
 	
@@ -36,15 +36,10 @@ clean:
 	rm -f $(OBJS) $(PROG)
 
 install: $(PROG)
-	if [ ! -x $(DESTDIR)$(bindir) ] ; then \
-		mkdir -p $(DESTDIR)$(bindir) ; fi
-	if [ ! -x $(DESTDIR)$(mandir) ] ; then \
-		mkdir -p $(DESTDIR)$(mandir) ; fi
 	$(INSTALL) $(INSTALLFLAGS) $(PROG) $(DESTDIR)$(bindir)
-	$(INSTALL) $(INSTALLFLAGS) $(MAN) $(DESTDIR)$(mandir)/$(MAN)
+	$(INSTALL) $(INSTALLFLAGS) -m 444 $(MAN) \
+		$(DESTDIR)$(mandir)/man1/$(MAN)
 
 uninstall:
-	if [ -e $(DESTDIR)$(bindir)/$(PROG) ] ; then \
-		rm $(DESTDIR)$(bindir)/$(PROG) ; fi
-	rm -f $(DESTDIR)$(mandir)/$(MAN)
-
+	rm -f $(DESTDIR)$(bindir)/$(PROG)
+	rm -f $(DESTDIR)$(mandir)/man1/$(MAN)
